Add OG properties

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,10 +5,9 @@
     <link rel="icon" href="./logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta property="og:title" content="Notefy" />
+    <meta property="og:description" content="A simple note-making webapp with intuitive UI" />
+    <meta property="og:image" content="https://assets.servatom.com/notefy/Thumbnail.png" />
     <link rel="apple-touch-icon" href="./logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
